--- a/fireworks/index.html
+++ b/fireworks/index.html
@@ -98,7 +98,7 @@ function modal(content, callback) {
 	});
 }
 
-var myWords = '你稍微记一下：\n我找你的时候，\n就是爆炸想你，\n没找你的时候，\n就是憋着在想你~~~ \n 生日快乐~永远18岁~~~';
+var myWords = '凡是过往皆是序章　\n\n\n\n所有将来皆为可盼　\n\n\n\n愿你三冬暖，\n愿你春不寒，\n愿你天黑有灯，\n下雨有伞。\n愿你可以，忘掉所有的不愉快，\n喝想喝的酒，\n说想说的话，\n见想见的人，\n想来想去，\n总有千万种欢喜。~~~ \n 生日快乐~永远18岁~~~';
 var x = 0;
 var speed = 280;
 var current = 0;
