--- a/html/Memories.html
+++ b/html/Memories.html
@@ -14,10 +14,11 @@
       <div class="section">
           <div class="ly-box01">
             <div class="ly-txt01">
-              <p class="ly-stxt01">没遇到你之前，</p>
-              <p class="ly-stxt02">我的世界是黑白的</p>
-              <p class="ly-stxt03">现在看到你之后</p>
-              <p class="ly-stxt04">我的世界全黑了</p>
+              <p class="ly-stxt01">祝艾宝，</p>
+              <p class="ly-stxt02">吉时吉日~喜如风</p>
+              <p class="ly-stxt03">丰年丰月~如丰登</p>
+              <p class="ly-stxt04">增福增财-增长寿</p>
+              <p class="ly-stxt05">寿山寿海-寿长生</p>
             </div>
             <div class="ly-txt02">
               <p class="ly-stxt06">如果有一天你想哭</p>
